deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-kouventa-deployment
  namespace: default
  labels:
    app: backend-kouventa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-kouventa
  template:
    metadata:
      labels:
        app: backend-kouventa
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 2000
      # Add this section to reference the private registry secret
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend-kouventa-container
          image: hakaes/f9cozoxjvpzx:jenkins_161
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-kouventa-service
  namespace: default
  labels:
    app: backend-kouventa
spec:
  type: LoadBalancer
  selector:
    app: backend-kouventa
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

---
# Deployment untuk container PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:13
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: default
  labels:
    app: postgres
spec:
  # Changed the type to LoadBalancer to make it externally accessible.
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-kouventa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: backend-kouventa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-kouventa-service
                port:
                  number: 80
